...
        
        return activityIndicator
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "ProfileWebView"
        view.backgroundColor = .whiteUniversal
        setupUiItems()
    }
}

extension ProfileWebViewController {
...
