...
        fatalError("init(coder:) has not been implemented")
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .whiteUniversal
        view.accessibilityIdentifier = "FavoriteView"
        setupUIItem()
        bind()
        viewModel.loadNftLikes()
    }
    
    override func viewWillDisappear(_ animated: Bool) {
...
