...
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "MyNftView"
        bind()
        viewModel.loadMyNFT()
        view.backgroundColor = .whiteUniversal
        setupUIItem()
    }
    
...
